--- a/10-11.md
+++ b/10-11.md
@@ -57,3 +57,96 @@ PodにReadOnlyなホストのファイルシステムマウント機能を追加
 ## Action Required
 
 * APIサーバで「 `Priority` admission plugin」なるものがデフォルトで有効になる。
+
+## Changelog 1.11.2
+
+[CHANGELOG-1.11.2](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG-1.11.md#v1112)
+
+### Cluster Autoscaler version updated to 1.3.1
+- Adds support for GPU limits on GKE.
+### Default value for expendable pod priority cutoff in GCP deployment of Cluster Autoscaler changed from 0 to -10
+これに伴い、自分たちのワークロードのpriorityを -10 ~ 0 にしている場合は、競合する可能性があるので、-10未満にすること。
+
+[Cluster Autosscaler FAQ](https://github.com/kubernetes/autoscaler/blob/master/cluster-autoscaler/FAQ.md#how-does-cluster-autoscaler-work-with-pod-priority-and-preemption)
+
+--expendable-pods-priority-cutoff 以下のPodを配置するためのオートスケールを行わない、という仕組み。
+GKEでは、1.11.2から `-10`に設定されている。
+
+[Pod Priority and Preemption](https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/)
+
+kind:PriorityClassを使ってPod Priorityを
+設定することができ、この設定によりSchedulerのPod配置優先順位を変更することができる。
+
+## Changelog 1.11.3
+
+[CHANGELOG-1.11.3](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG-1.11.md#v1113)
+
+- 特にGKEに関わりそうな変更無し
+
+## Changelog 1.11.4
+
+[CHANGELOG-1.11.4](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG-1.11.md#v1114)
+
+- Action Required なし
+
+### [GCE] Enable by default audit logging truncating backend.
+
+[[Audit] Instrument truncating audit backend](https://github.com/kubernetes/kubernetes/issues/62363)
+こちらのIssueでふんわり語られてるが、prometheus metricが多すぎるとかの場合は、Auditlogトランケートする処理を追加した
+(が、詳細はわからず)
+
+### Update [Cluster Autoscaler to version 1.3.3](https://github.com/kubernetes/autoscaler/releases/tag/cluster-autoscaler-1.3.3)
+- Nodeを多めに起動しがちだった問題の修正
+
+### [GCP] Added env variables to control CPU requests of kube-controller-manager and kube-scheduler.
+
+- kube-controller-manager と kube-scheduler は固定のRequestsを要求していたが、これを env variable で変更できるようにしたとかなんとか
+- kube-scheduler は Pod配置をスケジュールをするやつ
+  - CPU Requests は 75m
+- kube-controler-manager は Replicationを制御するリソースの制御を行うやつらしい [参考](https://kubernetes.io/docs/reference/command-line-tools-reference/kube-controller-manager/)
+  - CPU Requests は 200m
+- GKEマスターを構築しないとあんまり関係ないぽい
+
+## Changelog 1.11.5
+
+[CHANGELOG-1.11.5](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG-1.11.md#v1115)
+
+### GCE/GKE load balancer health check default interval changes from 2 seconds to 8 seconds, unhealthyThreshold to 3. 
+
+Load Balancing のヘルスチェック間隔が2秒から8秒に、unhealthyThresholdは3回に変更された (今までのヘルスチェック間隔短すぎィ！)
+
+## Changelog 1.11.6
+
+[CHANGELOG-1.11.6](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG-1.11.md#v1116)
+
+### On GCI, NPD starts to monitor kubelet, docker, containerd crashlooping, read-only filesystem and corrupt docker overlay2 issues.
+
+今までノードのログしか見てなかったけど、ここからkubelet, docker, containerd crashlooping, read-only filesystem and corrupt docker overlay2も監視するようにしたぜ
+
+## Changelog 1.11.7
+
+[CHANGELOG-1.11.7](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG-1.11.md#v1117)
+
+### Fix kube-proxy PodSecurityPolicy binding on GCE & GKE. This was only an issue when running kube-proxy as a DaemonSet, with PodSecurityPolicy enabled
+
+## Changelog 1.11.8
+
+[CHANGELOG-1.11.8](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG-1.11.md#v1118)
+
+### Update Cluster Autoscaler to version 1.3.7.
+- Nodeのメモリ使用量予測が改善
+
+## その他気になるやつ
+
+### SIG Apps
+
+Added generators for apps/v1 deployments.
+1.11 から、 kind:Deployment のバージョンが apps/v1 になった
+
+### SIG Cluster Lifecycle
+
+kubeadm will now deploy CoreDNS by default instead of KubeDNS
+
+1.11 から、 kubeDNSに代わり CoreDNSがデフォルトになった
+
+が、GKEでは相変わらず kube-dns が使われていて、なんでじゃとなる
